help3xsl/default.css
/*
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This file incorporates work covered by the following license notice:
 *
 *   Licensed to the Apache Software Foundation (ASF) under one or more
 *   contributor license agreements. See the NOTICE file distributed
 *   with this work for additional information regarding copyright
 *   ownership. The ASF licenses this file to you under the Apache
 *   License, Version 2.0 (the "License"); you may not use this file
 *   except in compliance with the License. You may obtain a copy of
 *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
 */
/*
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+                     LIBREOFFICE HELP IN BROWSER                   +
+                          DEFAULT STYLESHEET                       +
+                           WESTERN LANGUAGES                       +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

We use px as the unit for navigation elements and fonts because we do
not want them to scale with browser-set font size.
We use rem as the unit for article and footer contents because they
do not break anything related to layout by scaling.

*/
:root {
  --font_mono: Menlo, "Cascadia Mono", "Cascadia Code", Consolas, "DejaVu Sans Mono", monospace;
  --font_body: Ubuntu, Cantarell, "Segoe UI Variable", "Segoe UI", "Noto Sans", "DejaVu Sans", "Lucida Grande", sans-serif, FreeSerif, NanumGothic, "Noto Sans Tibetan", Taprom;
  --background-color: #f7f8f7;
}

body,
p,
h1,
h2,
h3,
h4,
h5,
h6,
.listitem,
.listitemintable,
.tablecontent {
    font-family: var(--font_body);
}
.input {
    background-color: rgba(0,0,0,0.04);
    transition-property: background-color;
    transition-duration: 150ms;
    border-bottom: 1px dashed rgba(0,0,0,0.1);
    font-family: var(--font_mono);
}
[data-tooltip]{
  position:relative;
}
[data-tooltip]::before {
    content: "";
    position: absolute;
    top:-6px;
    left:50%;
    transform: translateX(-50%);
    border-width: 4px 6px 0 6px;
    border-style: solid;
    border-color: rgba(0,0,0,0.7) transparent transparent transparent;
    z-index: 100;
    opacity: 0;
    pointer-events: none;
}
[data-tooltip]::after {
    content: attr(data-tooltip);
    position: absolute;
    left:50%;
    top:-6px;
    transform: translateX(-50%)   translateY(-100%);
    background: rgba(0,0,0,0.7);
    text-align: center;
    color: #fff;
    padding:4px 2px;
    font-size: 12px;
    min-width: 80px;
    border-radius: 5px;
    opacity: 0;
    pointer-events: none;
}
[data-tooltip]:hover:before, [data-tooltip]:hover:after {
    opacity: 1;
    pointer-events: auto;
}
body {
    background-color: var(--background-color);
    margin: 0;
    line-height: normal;
}
::selection {
    background: #FFEB9F;
}
a {
    text-decoration-color: rgba(0,0,0,0.15);
    color: #0461e0;
}
a:hover {
    text-decoration: underline;
    color: #023a86;
}
a:visited {
    color: #633363;
}
pre,
.code,
.codeintable,
.example,
.exampleintable,
.literal,
.literalintable,
.path,
.pathintable {
    background-color: rgba(0,0,0,0.04);
    border-radius: 2px;
    display: inline;
    padding: 1px 3px;
    font-family: var(--font_mono);
    word-wrap: anywhere;
}
.smathcode {
    border-radius: 2px;
    padding: 1px 3px;
    font-family: var(--font_mono);
}
.acronym {
    font-weight: bold;
}
.related {
    font-weight: bold;
    margin-top: 1.67rem;
    border-top: 1px solid black;
}
.emph,
.menuitem {
    font-weight: bold;
}
.keycode {
    font-family: var(--font_mono);
}
.widget{
    padding: 1px 10px;
    background: #f0f0f0;
    background: linear-gradient(to bottom,#f0f0f0,#fcfcfc);
    border-radius: 3px;
    color: #303030;
    border: 1px solid #a0a0a0;
    border-bottom-width: 2px;
    white-space: nowrap;
}
/* div's for warning, tip and note */
.note,
.tip,
.warning {
    display:flex;
    align-items: center;
    border-radius: 2px;
    box-shadow: 0 2px 5px -3px rgb(0 0 0 / 10%);
    padding: 0.2em;
    margin-top: 15px;
}
.note {
    border-left: 2px solid #309048;
    background-color: #d9f1dd;
}
.tip {
    border-left: 2px solid #0063b1;
    background-color: #cde5f7;
}
.warning {
    border-left: 2px solid #ed8733;
    background-color: #f6f1d2;
}
.noteicon, .notetext {
    padding:0.3em;
}
/* Override some Prism.js styles */
code[class*="language-"], pre[class*="language-"] {
    white-space: pre-wrap;
}

/* Table related classes */

/* Special case of table with one cell*/
.onecell{
    box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px;
    border-bottom: 1px solid #E8E8E8;
}
/* Special case of icon table*/
.icontable {
    display:flex;
    align-items:center;
}
.iconcell {
    padding:0.3em;
}

table {
    background: #FEFEFE;
    box-shadow: rgba(0,0,0,0.08) 0 1px 5px 0;
    border-collapse: collapse;
}
table, th, td {
    border-top: 0;
    border-bottom: 1px solid #E8E8E8;
    border-left: 0;
    border-right: 0;
    padding: 0.3em;
}
html[dir=ltr] th {
    text-align: left;
}
.tablehead,
.tableheadintable {
    font-weight: bold;
    margin-top: 0px;
}
.tableheadcell {
    color: white;
    vertical-align:top;
}

.table_font_small {
    font-size: 0.98rem;
}

/* ScriptForge service tables */
.sf_table {
    min-width: 100%;
}
.sf_table thead {
    display: none;
}
.sf_table tr, .sf_table td {
    display: block;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 0.67rem;
    color: #148603;
}
p,
ol,
td {
    font-size: 1.15rem;
    margin: 2px 0 10px 0;
}
h1 {
    font-size: 1.83rem;
    font-weight: 300;
    border-bottom: 2px solid #148603;
    margin-bottom: 1.67rem;
}
h1 a {
    text-decoration: none;
}
h2 {
    font-size: 1.55rem;
}
h3 {
    font-size: 1.33rem;
}
h4,
h5,
h6 {
    font-size: 1.17rem;
}
/* ... */

